PR26836, memory leak in parse_args

PR 26836
	* lexsup.c (parse_args): Free really_longopts, longopts and
	shortopts.